# lyc-robot

./: .dockerignore  .env  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  bot.py  pyproject.toml  requirements.txt
src/common/: qq_version_monitor.py
src/common/ai_chat/: base.py  chat_engine.py  utils.py
src/common/ai_chat/txcloud/: sse.py
src/common/ai_chat/yuanbao/: __init__.py  api.py  login.py
src/common/bilibili/: api.py  utils.py  wbi.py
src/common/bilicard/: bilicard.py  config.py
src/common/browser/screenshot/: zhihu.py
src/common/state/: __init__.py
src/common/utils/: async_task_pool.py  htmlhelper.py
src/db/: __init__.py
src/db/alembic_tools/: tool.py
src/db/alembic_tools/common_db/: script.py
src/db/alembic_tools/group_point_db/: script.py
src/db/alembic_tools/group_point_db/migrations/: env.py
src/db/alembic_tools/group_point_db/migrations/versions/: 344568f742dc_group_members_add_username.py
src/db/model_utils/: check_repeat.py  game_xiuxian.py  plugin_manager.py  qq_version_monitor.py
src/db/models/: check_repeat.py  game_xiuxian.py  qq_version_monitor.py
src/plugins/: check_repeat.py  group_album.py  nsfw_image_detector.py  qq_version_monitor.py
src/plugins/__game_xiuxian/: depends.py
src/plugins/ai_chat/: __init__.py  login_yuanbao.py
src/plugins/ai_status/: __init__.py  render.py
src/plugins/bilicard/: __init__.py
src/plugins/blacklist/: __init__.py
src/plugins/codex2api_status/: __init__.py  render.py
src/plugins/common/: depends.py  message.py  platforms.py
src/plugins/cpa_status/: __init__.py  render.py
src/plugins/dev_tools/: __init__.py  qq_msg_segment.py
src/plugins/doc_qa/: __init__.py
src/plugins/game_xiuxian/: __init__.py
src/plugins/github/subscriber/: __init__.py  depends.py
src/plugins/github/subscriber/db/: util.py
src/plugins/group_cmd_manager/: __init__.py
src/plugins/lottery/: __init__.py
src/plugins/manager/: __init__.py
src/plugins/newapi_status/: __init__.py  render.py
src/plugins/state/: __init__.py
src/plugins/sub2api_status/: __init__.py  render.py
tests/: test_ai_chat_yuanbao.py  test_txcloud_ai.py
tests/test_bilibili/: test_bilibili_ai.py
