[project]
name = "qqrobot-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "absl-py==2.3.0",
    "aiocqhttp==1.4.4",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "alembic==1.14.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "apscheduler==3.11.0",
    "arclet-alconna==1.8.38",
    "arclet-alconna-tools==0.7.10",
    "astunparse==1.6.3",
    "attrs==25.3.0",
    "av==14.4.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.4",
    "decorator==5.2.1",
    "distro==1.9.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.13",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flask==3.1.1",
    "flatbuffers==25.2.10",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "gast==0.6.0",
    "githubkit==0.12.14",
    "google-pasta==0.2.0",
    "greenlet==3.1.1",
    "grpcio==1.73.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "h5py==3.14.0",
    "hishel==0.1.1",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.26.0",
    "huggingface-hub==0.33.0",
    "hypercorn==0.17.3",
    "hyperframe==6.1.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "keras==3.10.0",
    "libclang==18.1.1",
    "litellm==1.57.11",
    "loguru==0.7.3",
    "mako==1.3.10",
    "markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "meme-generator==0.2.1",
    "ml-dtypes>=0.4.1",
    "msgpack==1.1.1",
    "multidict==6.5.0",
    "namex==0.1.0",
    "nepattern==0.7.7",
    "nonebot-adapter-github==0.5.0",
    "nonebot-adapter-onebot==2.4.6",
    "nonebot-adapter-telegram==0.1.0b20",
    "nonebot-plugin-alconna==0.54.1",
    "nonebot-plugin-apscheduler==0.5.0",
    "nonebot-plugin-uninfo==0.6.2",
    "nonebot-plugin-waiter==0.8.1",
    "nonebot2==2.4.2",
    "numpy==1.26.4",
    "openai==1.90.0",
    "opt-einsum==3.4.0",
    "optree==0.16.0",
    "packaging==25.0",
    "pandas==2.0.3",
    "pilk==0.2.4",
    "pillow==10.4.0",
    "playwright==1.49.1",
    "priority==2.0.0",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "psutil==5.9.8",
    "py==1.11.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyee==12.0.0",
    "pygments==2.19.2",
    "pygtrie==2.5.0",
    "pyinstaller>=6.16.0",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2023.4",
    "pyyaml==6.0.2",
    "quart==0.20.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "reportlab==4.0.9",
    "requests==2.32.4",
    "retry==0.9.2",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "tarina==0.6.8",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==3.1.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "tqdm==4.66.6",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "watchfiles==1.1.0",
    "websocket-client==1.6.4",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "win32-setctime==1.2.0",
    "wrapt==1.17.2",
    "wsproto==1.2.0",
    "yarl==1.20.1",
    "zipp==3.23.0",
]
